Clean up some warnings, mostly backstopper-core